@@ -27,6 +27,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Show an inverse locked indicator when the page has been locked by the current user in reports and dashboard listings (Vaibhav Shukla, LB (Ben Johnston))
  * Add clarity to the development documentation that `admonition` should not be used and titles for `note` are not supported, including clean up of some existing incorrect usage (LB (Ben Johnston))
  * Unify the styling of delete/destructive button styles across the admin interface (Paarth Agarwal)
+ * Adopt new designs and unify the styling styles for `.button-secondary` buttons across the admin interface (Paarth Agarwal)
 
 ### Bug fixes
 
@@ -38,6 +39,8 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
 ## Upgrade considerations
 
 ### Button styling class changes
+
+The `button-secondary` class is no longer compatible with either the `.serious` or `.no` classes, this partially worked previously but is no longer officially supported.
 
 When adding custom buttons using the `ModelAdmin` `ButtonHelper` class, custom buttons will no longer include the `button-secondary` class by default in index listings.
 
